--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "A testing repository"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "matplotlib>=3.10.1",
+dependencies = []
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.6",
 ]
